[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "nn"
authors = [{name = "Beau Lonnquist", email = "beau.lonnquist@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "pytest",
	"numpy",
	"scikit-learn",
	"matplotlib"
]

[project.urls]
Home = "https://github.com/blonn25/final-nn.git"